@@ -303,10 +303,10 @@ public class ProcessesAnalyticsBean {
   public List<Node> renderNodesForKPIType(List<Node> nodes) {
     if (this.selectedKpiType != null && this.selectedKpiType.isDescendantOf(KpiType.DURATION)) {
       List<String> avaibleTaskIds =
-          nodes.stream().filter(node -> node.getType() == NodeType.ARROW).map(node -> node.getSourceNodeId()).toList();
-
+          nodes.stream().filter(node -> node.getType() == NodeType.ARROW).map(node -> node.getSourceNodeId())
+              .collect(Collectors.toList());
       return nodes.stream().filter(node -> node.getType() != NodeType.ARROW && avaibleTaskIds.contains(node.getId()))
-          .toList();
+          .collect(Collectors.toList());
     }
     return nodes;
   }
